more coding updates and challenges

--- a/coding-challenges/index.html
+++ b/coding-challenges/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coding Challenges</title>
-</head>
-<body>
-    <script src="script2.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JS with Jonas Schmedtmann</title>
+  </head>
+  <body>
+    <main>
+      <h1>This is a practice zone!</h1>
+
+      <button class="buy">Buy new plane</button>
+      <button class="poll">View Poll</button>
+    </main>
+
+    <script src="script.js"></script>
+  </body>
 </html>
