--- a/bankist/index.html
+++ b/bankist/index.html
@@ -10,22 +10,23 @@
       href="https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="style.css" />
     <title>Bankist</title>
   </head>
+
   <body>
     <!-- TOP NAVIGATION -->
     <nav>
       <p class="welcome">Log in to get started</p>
       <img src="logo.png" alt="Logo" class="logo" />
+
       <form class="login">
         <input
           type="text"
           placeholder="user"
           class="login__input login__input--user"
         />
-        <!-- In practice, use type="password" -->
+
         <input
           type="password"
           placeholder="PIN"
@@ -55,6 +56,7 @@
           <div class="movements__date">3 days ago</div>
           <div class="movements__value">4 000€</div>
         </div>
+
         <div class="movements__row">
           <div class="movements__type movements__type--withdrawal">
             1 withdrawal
@@ -119,9 +121,7 @@
       </p>
     </main>
 
-    <!-- <footer>
-      &copy; by Jonas Schmedtmann. Don't claim as your own :)
-    </footer> -->
+    <footer>&copy; by Jonas Schmedtmann.</footer>
 
     <script src="script.js"></script>
   </body>
