--- a/bankist-2/index.html
+++ b/bankist-2/index.html
@@ -288,9 +288,12 @@
         <div class="slide"><img src="img/img-2.jpg" alt="Photo 2" /></div>
         <div class="slide"><img src="img/img-3.jpg" alt="Photo 3" /></div>
         <div class="slide"><img src="img/img-4.jpg" alt="Photo 4" /></div> -->
+
         <button class="slider__btn slider__btn--left">&larr;</button>
         <button class="slider__btn slider__btn--right">&rarr;</button>
-        <div class="dots"></div>
+        <div class="dots">
+          <!-- <button class="dots_dot" data-slide="1"></button> -->
+        </div>
       </div>
     </section>
 
